2007-03-07 Guillaume Rousse <guillomovitch@zarb.org> 0.1.1
	* requires UNIVERSAL::require

2007-03-05 Guillaume Rousse <guillomovitch@zarb.org> 0.1.0
	* initial release