@@ -2,9 +2,10 @@ ChangeLog
 lib/Youri/Utils.pm
 Makefile.PL
 MANIFEST			This list of files
+META.yml
 README
 t/kwalitee.t
 t/perlcritic.t
 t/pod-coverage.t
 t/pod.t
-META.yml                                 Module meta-data (added by MakeMaker)
+t/prereq.t
