@@ -1,11 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Youri-Utils
-version:      v0.1.1
+version:      v0.2.1
 version_from: lib/Youri/Utils.pm
 installdirs:  site
 requires:
+    DateTime:                      0
     UNIVERSAL::require:            0
+    version:                       0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.30_01
